--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,12 +9,12 @@
 
 	</head>
 	<body>
-	<section class="ftco-section">
+	
 
-		<div class="container">
+		
 			<nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
-		    <div class="container">
-		    	<a class="navbar-brand" href="index.html">Logotipo</a>
+		    
+		    	<a class="navbar-brand" href="index.html">Nike/Adidas/Puma</a>
 		      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="fa fa-bars"></span> Menu
 		      </button>
@@ -47,12 +47,10 @@
               </li>
 		        </ul>
 		      </div>
-		    </div>
+		    
 		  </nav>
     <!-- END nav -->
-  </div>
-
-	</section>
+  	
 
 	</body>
 </html>
