--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,34 +1,33 @@
-<section class="box">
-    <!--<header class="head">
-      <h1 class="title">Example App</h1>
-      <nav class="menu">
-        <ul>
-          <li>Register</li>
-          <li class="active">Login</li>
-        </ul>
-      </nav>
-    </header>-->
-    <div class="content">
-      <h3 class="label">Welcome <span>back!</span></h3>
-      <form action="#" id="form">
-        <div class="form-element input">
-          <label for="email" class="fa fa-user">Email or username</label>
-          <input type="text" name="email" id="email" />
-        </div>
-        <div class="form-element input">
-          <label for="password" class="fa fa-lock">Password</label>
-          <input type="password" name="password" id="password" />
-        </div>
-        <div class="form-element submit">
-          <input type="submit" id="submit" class="submit" value="Log in"/>
-        </div>
-      </form>
-      <!--<div class="register">
-        <a href="#" class="btn btn-register">Register</a>
-      </div>-->
+<div class="parent clearfix">
+  <div class="bg-illustration">
+    
+
+    <div class="burger-btn">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-  </section>
-  <div class="loader">
-    <div class="circle"></div>
+
   </div>
-  <!--<button id="remove">Remove</button>-->
+  
+  <div class="login">
+    <div class="container">
+      <h1>Inicie Sesión Para Acceder A<br />Su Cuenta</h1>
+  
+      <div class="login-form">
+        <form action="">
+          <input type="email" placeholder="Correo Electronico">
+          <input type="password" placeholder="Contraseña">
+
+          <div class="remember-form">
+            <input type="checkbox">
+            <span>Acepto Las Condiciones Del Servicio Y La Politica De Privacidad</span>
+          </div>          
+          <button type="submit">LOGIN</button>
+
+        </form>
+      </div>
+  
+    </div>
+    </div>
+</div>
