Agregar un comentario

--- a/src/app/components/registrar/registrar.component.html
+++ b/src/app/components/registrar/registrar.component.html
@@ -1,1 +1,35 @@
-<h1>{{title}}</h1>
+<div class="parent clearfix">
+    <div class="bg-illustration">
+      
+  
+      <div class="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+  
+    </div>
+    
+    <div class="login">
+      <div class="container">
+        <h1>Registrate Para Obtener<br />Tu Cuenta</h1>
+    
+        <div class="login-form">
+          <form action="">
+            <input type="name" placeholder="Nombre">
+            <input type="name" placeholder="Apellido">
+            <input type="email" placeholder="Correo Electronico">
+            <input type="password" placeholder="Contraseña">                        
+  
+            <div class="remember-form">
+              <input type="checkbox">
+              <span>Acepto Las Condiciones Del Servicio Y La Politica De Privacidad</span>
+            </div>          
+            <button type="submit">Registrarse</button>
+  
+          </form>
+        </div>
+    
+      </div>
+      </div>
+  </div>
