--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -114,13 +114,15 @@
     margin: 0 auto;
     position: relative;
   }
-  .login .container h1 {
+  .login .container h1 {    
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
     margin-top: 100px;
     font-size: 35px;
     font-weight: bolder;
   }
   .login .container .login-form {
-    margin-top: 112px;
+    margin-top: 80px;
   }
   .login .container .login-form form {
     display: -ms-grid;
@@ -141,7 +143,7 @@
     background: -o-linear-gradient(110deg, #f794a4 0%, #fdd6bd 100%);
     background: linear-gradient(-20deg, #f794a4 0%, #fdd6bd 100%);
     border: none;
-    margin-top: 124px;
+    margin-top: 24px;
     margin-bottom: 20px;
     width: 241px;
     height: 58px;
