--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -59,7 +59,7 @@
     position: relative;
     height: 100vh;
     width: 1194px;
-    background: url("https://http2.mlstatic.com/D_NQ_NP_766195-MCO47965248068_102021-W.jpg") no-repeat center center scroll;
+    background: url("https://www.manelsanchez.com/uploads/media/images/1a(74).gif") no-repeat center center scroll;
     background-size: cover;
     float: left;
     -webkit-animation: bgslide 2.3s forwards;
