--- a/src/app/modules/home/components/registrar/registrar.component.css
+++ b/src/app/modules/home/components/registrar/registrar.component.css
@@ -59,7 +59,7 @@
     position: relative;
     height: 100vh;
     width: 1194px;
-    background: url("https://m.media-amazon.com/images/I/71qXEaZglvL._AC_UX679_.jpg") no-repeat center center scroll;
+    background: url("https://cf.shopee.com.br/file/492f373ad1b50104121b810a84c5f08e") no-repeat center center scroll;
     background-size: cover;
     float: left;
     -webkit-animation: bgslide 2.3s forwards;
