--- a/src/app/modules/home/components/inicio/inicio.component.html
+++ b/src/app/modules/home/components/inicio/inicio.component.html
@@ -1,1 +1,51 @@
-<h1>{{title}}</h1>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2" class="active" aria-current="true"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner" style="text-align: center;">
+        <div class="carousel-item active">
+          <img src="https://www.paredro.com/wp-content/uploads/2019/04/puma-logo.jpg" height="70%" width="70%" >
+          <div class="carousel-caption d-none d-md-block">
+            <h5><b><FONT COLOR="black">NUEVAS TENDENCIAS Y MODELOS</FONT></b></h5>
+            <p><B><FONT COLOR="black">NO DUDES EN COMPRAR</FONT></B></p>
+          </div>
+        </div>
+        <div class="carousel-item" style="text-align: center;">
+          <img src="" class="d-block w-100" height="80%" width="80%">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item" style="text-align: center;">
+          <img src="http://weartesters.com/wp-content/uploads/2015/01/Nike-Jordan-Brand-Black-History-Month-Collection-Official-Release-Date-Main.jpg" height="80%" width="80%">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
