--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html lang="en">
-  <head>  	
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">		
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	</head>
 	<body>
-	
 
-		
+
+
 			<nav class="navbar navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
-		    
-		    	<a class="navbar-brand" href="index.html">Nike/Adidas/Puma</a>
+
+		    	<a class="navbar-brand" href="index.html">Shop C,Y,M </a>
 		      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="fa fa-bars"></span> Menu
 		      </button>
@@ -47,10 +47,10 @@
               </li>
 		        </ul>
 		      </div>
-		    
+
 		  </nav>
     <!-- END nav -->
-  	
+
 
 	</body>
 </html>
