--- a/src/app/modules/home/components/inicio/inicio.component.html
+++ b/src/app/modules/home/components/inicio/inicio.component.html
@@ -1,10 +1,41 @@
+<div class="contenedor" >
+  <img src="https://25gramos.com/wp-content/uploads/2021/03/supreme-1280x677-1.jpg" height="200px" width="1000px" style="margin-left: 22%;"/>
+  <div class="centrado text-white"> <H1>Bienvenidos </H1></div>
+</div>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
+
   </head>
+<br>
+<br>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="container-1">
+            <a routerLink="/contacto"> <img src="https://pbs.twimg.com/media/EtkErCPWgAA0-B6?format=jpg&name=large" style=" width: 100%;">
+              <div class="center-1 text-white" style="background-color: rgba(0,0,0,0.7); width: 100%; height: 100%;"> <H1 style="margin-top: 50%;">¿QUIERES CONTACTARNOS?</H1></div>
+            </a>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="container-1">
+            <a routerLink="/producto"> <img src="http://cdn.shopify.com/s/files/1/0094/6307/0798/articles/1520766519_1506793461_bape-shakr-aceeeceeefdbaf-637952_1200x1200.jpg?v=1587219667" style= "width:100%">
+              <div class="center-1 text-white" style="background-color: rgba(0,0,0,0.7); width: 100%; height: 100%;"> <H1 style="margin-top: 50%;">¿PRODUCTOS?</H1></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
+  <br>
   <body>
+
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
@@ -13,21 +44,21 @@
       </div>
       <div class="carousel-inner" style="text-align: center;">
         <div class="carousel-item active">
-          <img src="https://www.paredro.com/wp-content/uploads/2019/04/puma-logo.jpg" height="70%" width="70%" >
+          <img src="https://asturias.com.co/wp-content/uploads/2021/06/26995001_1.jpg" height="40%" width="40%" >
           <div class="carousel-caption d-none d-md-block">
-            <h5><b><FONT COLOR="black">NUEVAS TENDENCIAS Y MODELOS</FONT></b></h5>
-            <p><B><FONT COLOR="black">NO DUDES EN COMPRAR</FONT></B></p>
+            <h5><b>NUEVAS TENDENCIAS Y MODELOS</b></h5>
+            <p><B>NO DUDES EN COMPRAR</B></p>
           </div>
         </div>
         <div class="carousel-item" style="text-align: center;">
-          <img src="" class="d-block w-100" height="80%" width="80%">
+          <img src="https://library.sportingnews.com/2022-01/michael-jordan-scottie-pippen_ig6z8y1hfs6j1pthpb7guyk5j.jpg" class="d-block w-100" height="600px" width="500px">
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
         <div class="carousel-item" style="text-align: center;">
-          <img src="http://weartesters.com/wp-content/uploads/2015/01/Nike-Jordan-Brand-Black-History-Month-Collection-Official-Release-Date-Main.jpg" height="80%" width="80%">
+          <img src="https://i.pinimg.com/originals/44/59/d5/4459d57d908509aeaeaf916ec24e56c7.jpg" height="40%" width="40%">
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
