--- a/src/app/modules/home/components/inicio/inicio.component.html
+++ b/src/app/modules/home/components/inicio/inicio.component.html
@@ -158,6 +158,25 @@
           <div class="top-50 col-6">
             <h1 style="color: black; margin-top: 20px">TIENDA PRINCIPAL</h1>
           </div>
+          <div class="row">
+
+            <li>
+              <img width="100" height="100" src="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-UBICACION-150x150.png" class="attachment-thumbnail size-thumbnail" alt="" loading="lazy" srcset="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-UBICACION-150x150.png 150w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-UBICACION-300x300.png 300w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-UBICACION.png 418w" sizes="(max-width: 150px) 100vw, 150px">
+              <b>DIRECCIÓN : Cll. 106 A # 18 B 72</b>
+            </li>
+            <li>
+              <img width="100" height="100" src="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-TELEFONO-150x150.png" class="attachment-thumbnail size-thumbnail" alt="" loading="lazy" srcset="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-TELEFONO-150x150.png 150w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-TELEFONO-300x300.png 300w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-TELEFONO.png 417w" sizes="(max-width: 150px) 100vw, 150px">
+              <b>TELEFONO : 3107543082</b>
+            </li>
+            <li>
+              <img width="100" height="100" src="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-MAIL-150x150.png" class="attachment-thumbnail size-thumbnail" alt="" loading="lazy" srcset="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-MAIL-150x150.png 150w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-MAIL-300x300.png 300w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-MAIL.png 418w" sizes="(max-width: 150px) 100vw, 150px">
+              <B>CORREO : shoporiginal@gmail.com</B>
+            </li>
+            <li>
+              <img width="100" height="100" src="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-HORARIO-150x150.png" class="attachment-thumbnail size-thumbnail" alt="" loading="lazy" srcset="https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-HORARIO-150x150.png 150w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-HORARIO-300x300.png 300w, https://3j1z6j2up0jr3r2zz2111ri2-wpengine.netdna-ssl.com/wp-content/uploads/2020/11/AUTECO-KTM-TIENDA-ICONO-HORARIO.png 417w" sizes="(max-width: 150px) 100vw, 150px">
+              <B>HORARIOS : LUNES A VIERNES 9:00 A 18:00</B>
+            </li>
+          </div>
         </div>
       </div>
       <div class="col-6">
@@ -173,4 +192,38 @@
     </div>
   </div>
 </div>
+<br>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="card" style="width: 18rem;">
+        <img src="https://i.pinimg.com/564x/91/9b/02/919b023b76e3ba8b42eb7e4adc3f8a4f.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"><b>Vistete a la moda y con la mejor ropa del mercado</b></h5>
+          <p class="card-text"></p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card" style="width: 18rem;">
+        <img src="https://i.pinimg.com/564x/9e/dc/c7/9edcc76937b14f33005ed9df6ae1c1e4.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><b>Acercate a nuestra tienda principal para adquirir nuestros productos</b></h5>
 
+      </div>
+      <ul class="list-group list-group-flush">
+
+      </ul>
+    </div>
+    </div>
+    <div class="col">
+      <div class="card" style="width: 18rem;">
+        <img src="https://i.pinimg.com/564x/5e/38/61/5e3861327c79a815119bc138f6e18961.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><b>Conoce de nuestras marcas y las nuevas novedades que tenemos en el mercado</b> </h5>
+      <ul class="list-group list-group-flush">
+
+      </ul>
+    </div>
+    </div>
