--- a/src/app/modules/home/components/inicio/inicio.component.html
+++ b/src/app/modules/home/components/inicio/inicio.component.html
@@ -1,7 +1,4 @@
-<!-- <div class="contenedor" >
-  <img src="https://25gramos.com/wp-content/uploads/2021/03/supreme-1280x677-1.jpg" height="200px" width="1000px" style="margin-left: 22%;"/>
-  <div class="centrado text-black"> <p class="cua"></p></div>
-</div> -->
+
 
 <html lang="en">
   <head>
@@ -18,78 +15,18 @@
   <br />
   <br />
   <body>
-    <div
-      id="carouselExampleCaptions"
-      class="carousel slide"
-      data-bs-ride="false"
-    >
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="0"
-          class=""
-          aria-label="Slide 1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-          class="active"
-          aria-current="true"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
-      </div>
-      <div class="carousel-inner" style="text-align: center">
-        <div class="carousel-item active">
-          <img src="" height="60%" width="60%" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5><b>NUEVAS TENDENCIAS Y MODELOS</b></h5>
-            <p><B>NO DUDES EN COMPRAR</B></p>
-          </div>
-        </div>
-        <div class="carousel-item" style="text-align: center">
-          <img src="" class="d-block w-100" height="" width="" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item" style="text-align: center">
-          <img src="" height="" width="" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <input type="radio" name="position" checked />
+    <input type="radio" name="position" />
+    <input type="radio" name="position" />
+    <input type="radio" name="position" />
+    <input type="radio" name="position" />
+    <main id="carousel">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+    </main>
   </body>
 </html>
 <br />
