--- a/src/app/modules/home/components/inicio/inicio.component.html
+++ b/src/app/modules/home/components/inicio/inicio.component.html
@@ -21,11 +21,11 @@
     <input type="radio" name="position" />
     <input type="radio" name="position" />
     <main id="carousel">
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item"><img src="https://i.pinimg.com/564x/1b/73/a1/1b73a1f84d4e628377a08c6fe9180aee.jpg" height="400px" width="300px"> </div>
+      <div class="item"><img src="https://i.pinimg.com/564x/77/06/26/7706260de8a6ca5ddea31ce87b113356.jpg" height="400px" width="300px"></div>
+      <div class="item"><img src="https://i.pinimg.com/564x/46/f7/65/46f7653388f94c89c68f05de619cde47.jpg" height="400px" width="300px"></div>
+      <div class="item"><img src="https://i.pinimg.com/564x/3d/b9/de/3db9deb8245794fd0f2b98b48694ba09.jpg" height="400px" width="300px"></div>
+      <div class="item"><img src="https://i.pinimg.com/564x/68/b0/44/68b0442251595c724a4f835f444232e6.jpg" height="400px" width="300px"></div>
     </main>
   </body>
 </html>
